<resources>
    <string name="app_name">DVFU Yaimp</string>
    <string name="infoString">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse eveniet exercitationem nemo nesciunt quae, vero!</string>
    <string name="hintLogin">Login</string>
    <string name="hintPassword">Password</string>
    <string name="enterButton">Enter</string>
    <string name="restorePasswordButton">Restore password</string>
    <string name="rememberPassword">Remember the password</string>

    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="lesson">Lesson</string>
    <string name="_15_00">15:00</string>
    <string name="d820">D820</string>
    <string name="teacher">Teacher</string>
    <string name="event">Event</string>
    <string name="place">Place</string>
    <string name="next">Next</string>
    <string name="prev">Prev</string>
    <string name="description">Description</string>
    <string name="schedule">Schedule</string>
    <string name="visit">Visit</string>
    <string name="tmp">tmp</string>
    <string name="guest">Guest</string>
    <string name="host">Host</string>
    <string name="create_qr_code">Create QR-code</string>
    <string name="list_of_guests">List of guests:</string>
    <string name="building_8_2">Building: 8.2</string>
    <string name="room_312">Room: 312</string>


</resources>