<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainScreen"
    android:background="@color/mainBGC">


    <LinearLayout
        android:id="@+id/daysScrollLayout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_vertical"
        android:background="@color/dayScrollBGC"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/MonBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/round_button"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/monday"
            android:textColor="@color/white"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>

        <Button
            android:id="@+id/TueBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/round_button"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/tuesday"
            android:textColor="@color/white"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>

        <Button
            android:id="@+id/WedBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/round_button"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/wednesday"
            android:textColor="@color/white"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>

        <Button
            android:id="@+id/ThuBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/round_button"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/thursday"
            android:textColor="@color/white"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>

        <Button
            android:id="@+id/FriBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/round_button"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/friday"
            android:textColor="@color/white"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>

        <Button
            android:id="@+id/SatBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/round_button"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/saturday"
            android:textColor="@color/white"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"/>
    </LinearLayout>

    <ScrollView
        android:id="@+id/subjectScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="70dp"
        android:background="@color/white"
        android:rotationX="0"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <LinearLayout
            android:id="@+id/subjectScrollLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <LinearLayout
        android:id="@+id/DownSelection"
        android:padding="10dp"
        android:layout_height="70dp"
        android:layout_width="match_parent"
        android:background="@color/DownSelectionBGC"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/settings"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="20dp"
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/settings_button" />

        <Button
            android:id="@+id/calendar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/calendar_button"/>

        <Button
            android:id="@+id/LC"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/cabinet_button"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>