<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Host"
    android:background="@color/white">


    <TextView
        android:id="@+id/hostText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-4dp"
        android:text="@string/host"
        android:textColor="@color/black"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/vectorLineUp2"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="-115dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/vector_line_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/QRlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/createQR"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text"
            android:text="@string/create_qr_code"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.3" />

        <Button
            android:id="@+id/cameraHost"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ic_photocamera" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="0.2" />
    </LinearLayout>

    <TextView
        android:id="@+id/Guests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:text="@string/list_of_guests"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/QRlayout"
        android:visibility="visible"/>

    <ScrollView
        android:id="@+id/scrollLayoutGuests"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="-80dp"
        app:layout_constraintBottom_toTopOf="@id/vectorLineDown2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Guests">

        <LinearLayout
            android:id="@+id/layoutGuests"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>


    <LinearLayout
        android:id="@+id/QRBTNlayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/scrollLayoutGuests"
        app:layout_constraintEnd_toEndOf="@id/scrollLayoutGuests"
        app:layout_constraintStart_toStartOf="@id/scrollLayoutGuests"
        app:layout_constraintTop_toTopOf="@id/scrollLayoutGuests"
        android:gravity="center_horizontal"
        android:visibility="gone">

        <ImageView
            android:id="@+id/QRCode"
            android:layout_width="350dp"
            android:layout_height="300dp" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/closeQR"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/cross_icon"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <View
        android:id="@+id/vectorLineDown2"
        android:layout_width="0dp"
        android:layout_height="250dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="-115dp"
        android:background="@drawable/vector_line_down"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>